# hyperweave

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  fastmcp.json  fly.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/explanation/: architecture.mdx  camo-compatibility.mdx  cim-compliance.mdx  genome-profile-system.mdx  metadata-tiers.mdx
docs/how-to/: add-motion-to-badges.mdx  create-session-receipts.mdx  set-up-claude-code-hooks.mdx  use-live-data-badges.mdx
docs/reference/: cli.mdx  compose-spec.mdx  genomes.mdx  http-api.mdx  mcp-tools.mdx  motions.mdx  telemetry-contract.mdx
docs/spec/: hyperweave-protocol.mdx
docs/tutorials/: build-an-artifact-kit.mdx  compose-your-first-badge.mdx  install-session-telemetry.mdx
hooks/: install.py  session_end.sh
scripts/: extract_font_metrics.py  extract_glyphs.py  extract_specimen_fixtures.py  fetch_core_glyphs.py  generate_diagram_galleries.py  generate_hw_compliant.py  generate_kit_explainer.py  generate_proofset.py  generate_surface_matrix.py  glyph_audit.py  probe_live_stats.py  probe_star_history.py  proofset_harness.py  raster_verify.py  refresh_examples.py  stress_test.py
src/hyperweave/: __init__.py  __main__.py  cli.py  kit.py
src/hyperweave/api/: __init__.py  server.py
src/hyperweave/cli/: __init__.py  main.py
src/hyperweave/compose/: __init__.py  artifact_store.py  assembler.py  bar_chart.py  bundled_specs.py  chart_layout.py  context.py  engine.py  lanes.py  layout.py  matrix_cells.py  matrix_infer.py  matrix_layout.py  matrix_project.py  matrix_records.py  palette.py  payload.py  reasoning.py  resolver.py  rhythm.py  rhythm_strip.py  schema.py  stats_layout.py  surface.py  surface_modes.py  targets.py  treemap.py  validate_paradigms.py
src/hyperweave/config/: __init__.py  genome_validator.py  loader.py  registry.py  settings.py
src/hyperweave/connectors/: __init__.py  arxiv.py  base.py  cache.py  github.py  rest.py  snapshots.py
src/hyperweave/core/: __init__.py  base.py  cell_layout.py  color.py  (+21 more)
tests/: conftest.py  helpers.py  test_api_ontology.py  test_assembler.py  test_badge_brutalist_dark.py  test_badge_cellular.py  test_badge_layout.py  test_chart_engine.py  test_chart_frame.py  test_chromatic_coverage_validator.py  test_codex_parser.py  test_compose_bar_chart.py  test_compose_family_field.py  test_compose_treemap.py  test_compose_variant_field.py  test_compositional_rendering.py  test_connectors.py  test_core.py  test_data_tokens.py  test_divider_cellular.py  test_divider_genome_specific.py  test_doctor.py  test_family_default_resolution.py  test_font_gating.py  test_font_metrics_chakra.py  test_generator.py  test_genome_automata.py  test_github_scrape.py  test_grammar_router.py  test_icon_banner_marquee_cellular.py  test_install_hook.py  test_kit.py  test_light_cohesion.py  test_marquee_v0_2_16.py  test_mcp.py  test_mcp_server.py  test_ontology_loader.py  test_paradigm_cellular.py  test_paradigm_dispatch.py  test_paradigm_extensibility.py  (+26 more)
tests/compose/: conftest.py  test_acceptance_renders.py  test_algorithmic_geometry.py  test_assembler.py  test_badge_brutalist_dark.py  test_badge_layout.py  test_badge_mode.py  test_brutalist_light_routing.py  test_bug001_wrap.py  test_bundled_specs.py  test_chart_frame.py  test_chromatic_coverage_validator.py  test_chrome_variants.py  test_compose_bar_chart.py  test_compose_rhythm_strip.py  test_compose_schema.py  test_compose_treemap.py  test_conformance_census.py  test_context_load_area.py  test_diagram_annotation_placement.py  test_diagram_annotations_pass.py  test_diagram_canvas_fit.py  test_diagram_containment_pins.py  test_diagram_content_anchor.py  test_diagram_contrast.py  test_diagram_dag_and_over_arc_geometry.py  test_diagram_diagnostics.py  test_diagram_edge_chip_seating.py  test_diagram_fan_gather_geometry.py  test_diagram_frame.py  test_diagram_hub_lanes.py  test_diagram_idioms.py  test_diagram_input.py  test_diagram_lane_alignment.py  test_diagram_layered.py  test_diagram_layout.py  test_diagram_motion.py  test_diagram_motion_precedence.py  test_diagram_nesting.py  test_diagram_palette.py  (+64 more)
tests/config/: test_genome_roles.py
tests/connectors/: conftest.py  test_connectors.py  test_data_tokens.py  test_github_scrape.py
tests/core/: conftest.py  test_core.py  test_diagram_annotations.py  test_kit.py  test_proofset.py  test_surface_spec.py
tests/delivery/: test_embed.py  test_kitty.py  test_upload.py
tests/fixtures/: antigravity_session.jsonl  codex_session.jsonl  codex_session_patches.jsonl  compact_session.jsonl  primer_diagram_language.json  proofset_data.json  session.json  session.jsonl  synthetic_session.jsonl
tests/formats/: test_ansi.py  test_face_auto.py  test_raster.py  test_static.py
tests/integration/: conftest.py  test_cli_compose_contract.py  test_cli_delivery.py  test_cli_diagram.py  test_cli_dotted_genome.py  test_cli_help.py  test_cli_matrix.py  test_doctor.py  test_extras_isolation.py  test_install_hook.py  test_session_sync.py  test_telemetry_integration.py  test_telemetry_skin_dispatch.py
tests/mcp/: conftest.py  test_mcp.py  test_mcp_diagram.py  test_mcp_matrix.py
tests/render/: conftest.py  test_chart_engine.py  test_render.py
tests/serve/: conftest.py  test_artifact_formats.py  test_card_promotion.py  test_chart_degradation.py  test_serve.py  test_serve_diagram.py  test_serve_font_csp.py  test_serve_live_state.py  test_serve_matrix.py  test_url_stability.py
tests/surfaces/: __init__.py  test_parity.py  test_registry.py
tests/telemetry/: conftest.py  test_antigravity_parser.py  test_codex_bug005.py  test_codex_parser.py  test_codex_shell_outcomes.py  test_context_window.py  test_parse_transcript_auto.py  test_receipt_paths.py  test_receipt_payload.py  test_runtime_registries.py  test_telemetry.py  test_telemetry_contract_per_stage.py  test_tool_class_completeness.py
tests/verbs/: test_discoverability.py  test_read_verbs.py  test_transform.py
(+513 files in other folders)
