[project]
name = "hyperweave"
dynamic = ["version"]
description = "Headless visual design system for AI agents. One API call → self-contained SVG."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "InnerAura Labs" }]
readme = "README.md"
keywords = [
    "svg",
    "svg-generation",
    "design-system",
    "ai-agents",
    "generative-ui",
    "mcp-server",
    "mcp",
    "developer-tools",
    "fastapi",
    "claude-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

[project.urls]
# Documentation = "https://hyperweave.app/docs"
Repository = "https://github.com/InnerAura/hyperweave"
Issues = "https://github.com/InnerAura/hyperweave/issues"
Discord = "https://discord.gg/wVmcAZPQZ8"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer[all]>=0.15",
    "jinja2>=3.1",
    "httpx>=0.28",
    "fastmcp>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
hyperweave = "hyperweave.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hyperweave/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperweave"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-pretty>=1.2",
    "pytest-randomly>=3.16",
    "pytest-sugar>=1.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = [
    "slow: marks tests as slow",
    "snapshot: visual regression",
    "live: network access (deselect with '-m \"not live\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
